vCenter integration UI added
added vcenter input info for vcenter into settings and changed wizard and dependencies
Generate Cirros metadata in Nailgun.

Change-Id: Ie46be6dc4a1219f8fbbf88ef6f6691e8476bf4d6

--- a/nailgun/nailgun/fixtures/openstack.yaml
+++ b/nailgun/nailgun/fixtures/openstack.yaml
@@ -596,10 +596,77 @@
           metadata:
             metadata_proxy_shared_secret:
               generator: "password"
-- pk: 1
+- &vcenter_release
   extend: *full_release
   fields:
-    name: "Havana on CentOS 6.5"
+    attributes_metadata:
+      editable:
+        common:
+          libvirt_type:
+            value: "qemu"
+            values:
+              - data: "kvm"
+                label: "KVM"
+                description: "Choose this type of hypervisor if you run OpenStack on hardware"
+              - data: "qemu"
+                label: "QEMU"
+                description: "Choose this type of hypervisor if you run OpenStack on virtual hosts."
+              - data: "vcenter"
+                label: "VCENTER"
+                description: "Choose this type of hypervisor if you run OpenStack in a vCenter environment."
+        vcenter:
+          metadata:
+            weight: 10
+          use_vcenter:
+            value: true
+            label: ""
+            description: ""
+            weight: 05
+            type: "hidden"
+          host_ip:
+            value: ""
+            label: "vCenter IP"
+            description: ""
+            weight: 10
+            type: "text"
+            depends:
+              - "settings:common.libvirt_type.value": "vcenter"
+            conflicts:
+              - "cluster:net_provider": "neutron"
+          vc_user:
+            value: ""
+            label: "username"
+            description: "vCenter Username"
+            weight: 30
+            type: "text"
+            depends:
+              - "settings:common.libvirt_type.value": "vcenter"
+            conflicts:
+              - "cluster:net_provider": "neutron"
+          vc_password:
+            value: ""
+            label: "password"
+            description: "vCenter Password"
+            weight: 30
+            type: "password"
+            depends:
+              - "settings:common.libvirt_type.value": "vcenter"
+            conflicts:
+              - "cluster:net_provider": "neutron"
+          cluster:
+            value: ""
+            label: "cluster"
+            description: "vCenter cluster name"
+            weight: 40
+            type: "text"
+            depends:
+              - "settings:common.libvirt_type.value": "vcenter"
+            conflicts:
+              - "cluster:net_provider": "neutron"
+- pk: 1
+  extend: *vcenter_release
+  fields:
+    name: "Havana on CentOS 6.4"
     version: "2013.2.2"
     operating_system: "CentOS"
     description: "This option will install the OpenStack Havana packages using a CentOS based operating system. With high availability features built in, you are getting a robust, enterprise-grade OpenStack deployment."
@@ -630,7 +697,7 @@
           profile:
             generator_arg: "centos-x86_64"
 - pk: 3
-  extend: *full_release
+  extend: *vcenter_release
   fields:
     name: "Havana on Ubuntu 12.04"
     version: "2013.2.2"
