Add entities for Fuel upgrade
Adds api_version, fuel_version, openstack_version, repo_metadata, puppet_modules_source, puppet_manifests_source to
message for orchestrator and corresponding fields to 'release' DB table.

Implements: blueprint fuel-upgrade

Change-Id: Ic86fb52c99aaee6a75536a153ff61fdd776c73f7

--- a/nailgun/nailgun/settings.yaml
+++ b/nailgun/nailgun/settings.yaml
@@ -3,7 +3,8 @@ LISTEN_PORT: "8000"
 DEVELOPMENT: 1
 
 VERSION:
-  release: "3.0"
+  release: "5.0"
+  api: "1"
   nailgun_sha: "Unknown build"
   astute_sha: "Unknown build"
   fuellib_sha: "Unknown build"
