Add entities for Fuel upgrade
Adds api_version, fuel_version, openstack_version, repo_metadata, puppet_modules_source, puppet_manifests_source to
message for orchestrator and corresponding fields to 'release' DB table.

Implements: blueprint fuel-upgrade

Change-Id: Ic86fb52c99aaee6a75536a153ff61fdd776c73f7

--- a/nailgun/nailgun/fixtures/openstack.yaml
+++ b/nailgun/nailgun/fixtures/openstack.yaml
@@ -571,6 +571,8 @@
   extend: *full_release
   fields:
     name: "Havana on CentOS 6.5"
+    api_version: "1"
+    fuel_version: "5.0"
     version: "2013.2.2"
     operating_system: "CentOS"
     description: "This option will install the OpenStack Havana packages using a CentOS based operating system. With high availability features built in, you are getting a robust, enterprise-grade OpenStack deployment."
@@ -604,6 +606,8 @@
   extend: *full_release
   fields:
     name: "Havana on Ubuntu 12.04"
+    api_version: "1"
+    fuel_version: "5.0"
     version: "2013.2.2"
     operating_system: "Ubuntu"
     description: "This option will install the OpenStack Havana packages using Ubuntu as a base operating system. With high availability features built in, you are getting a robust, enterprise-grade OpenStack deployment."
