--- a/nailgun/nailgun/fixtures/openstack.yaml
+++ b/nailgun/nailgun/fixtures/openstack.yaml
@@ -559,7 +559,7 @@
   extend: *full_release
   fields:
     name: "Havana on CentOS 6.4"
-    version: "2013.2.2"
+    current_os_version: "2013.2.2"
     operating_system: "CentOS"
     description: "This option will install the OpenStack Havana packages using a CentOS based operating system. With high availability features built in, you are getting a robust, enterprise-grade OpenStack deployment."
     attributes_metadata:
@@ -592,7 +592,7 @@
   extend: *full_release
   fields:
     name: "Havana on Ubuntu 12.04"
-    version: "2013.2.2"
+    current_os_version: "2013.2.2"
     operating_system: "Ubuntu"
     description: "This option will install the OpenStack Havana packages using Ubuntu as a base operating system. With high availability features built in, you are getting a robust, enterprise-grade OpenStack deployment."
     attributes_metadata:
