Ceph and Mongo roles should be in conflict
This is hotfix for blueprint nailgun-fix-allocation-logic-for-full-disk-key.
Mongo just can't be installed with ceph for now.

Related to blueprint nailgun-fix-allocation-logic-for-full-disk-key

Change-Id: I4f9909bce7109840a007855f4b0c3ca28927cdd1

--- a/nailgun/nailgun/fixtures/openstack.yaml
+++ b/nailgun/nailgun/fixtures/openstack.yaml
@@ -29,14 +29,15 @@
         name: "Storage - Cinder LVM"
         description: "Cinder LVM provides block storage over iSCSI. Block storage can be used for database storage, expandable file systems, or providing a server with access to raw block level devices."
       mongo:
-        name: "MongoDB"
-        description: "Storage - MongoDB for Ceilometer"
+        name: "Telemetry - MongoDB"
+        description: "A feature-complete and recommended database for storage of metering data from OpenStack Telemetry (Ceilometer)."
         conflicts:
           - compute
+          - ceph-osd
         depends:
-          condition:
-            "settings:additional_components.ceilometer.value": true
-          warning: "Ceilometer should be enabled"
+          - condition:
+              "settings:additional_components.ceilometer.value": true
+            warning: "Ceilometer should be enabled"
     networks_metadata:
       nova_network:
         networks:
@@ -334,6 +335,8 @@
       ceph-osd:
         name: "Storage - Ceph OSD"
         description: "Ceph storage can be configured to provide storage for block volumes (Cinder), images (Glance) and ephemeral instance storage (Nova). It can also provide object storage through the S3 and Swift API (See settings to enable each)."
+        conflicts:
+          - mongo
     networks_metadata:
       neutron:
         networks:
