Ceph and Mongo roles should be in conflict
This is hotfix for blueprint nailgun-fix-allocation-logic-for-full-disk-key.
Mongo just can't be installed with ceph for now.

Related to blueprint nailgun-fix-allocation-logic-for-full-disk-key

Change-Id: I4f9909bce7109840a007855f4b0c3ca28927cdd1

--- a/nailgun/nailgun/fixtures/openstack.yaml
+++ b/nailgun/nailgun/fixtures/openstack.yaml
@@ -33,6 +33,7 @@
         description: "Storage - MongoDB for Ceilometer"
         conflicts:
           - compute
+          - ceph-osd
         depends:
           condition:
             "settings:additional_components.ceilometer.value": true
@@ -334,6 +335,8 @@
       ceph-osd:
         name: "Storage - Ceph OSD"
         description: "Ceph storage can be configured to provide storage for block volumes (Cinder), images (Glance) and ephemeral instance storage (Nova). It can also provide object storage through the S3 and Swift API (See settings to enable each)."
+        conflicts:
+          - mongo
     networks_metadata:
       neutron:
         networks:
