--- a/nailgun/nailgun/fixtures/openstack.yaml
+++ b/nailgun/nailgun/fixtures/openstack.yaml
@@ -23,9 +23,20 @@
         description: "A compute node creates, manages and terminates virtual machine instances."
         conflicts:
           - controller
+          - mongo
       cinder:
         name: "Storage - Cinder LVM"
         description: "Cinder LVM provides block storage over iSCSI. Block storage can be used for database storage, expandable file systems, or providing a server with access to raw block level devices."
+      mongo:
+        name: "MongoDB"
+        description: "Storage - MongoDB for Ceilometer"
+        conflicts:
+          - compute
+          - ceph-osd
+        depends:
+          condition:
+            "settings:additional_components.ceilometer.value": true
+          warning: "Ceilometer should be enabled"
     networks_metadata:
       nova_network:
         networks:
@@ -89,6 +100,9 @@
         cinder:
           - {allocate_size: "min", id: "os"}
           - {allocate_size: "all", id: "cinder"}
+        mongo:
+          - {allocate_size: "min", id: "os"}
+          - {allocate_size: "all", id: "vm"}
         other:
           - {allocate_size: "all", id: "os"}
       volumes:
@@ -315,10 +329,13 @@
       - compute
       - cinder
       - ceph-osd
+      - mongo
     roles_metadata:
       ceph-osd:
         name: "Storage - Ceph OSD"
         description: "Ceph storage can be configured to provide storage for block volumes (Cinder), images (Glance) and ephemeral instance storage (Nova). It can also provide object storage through the S3 and Swift API (See settings to enable each)."
+        conflicts:
+          - mongo
     networks_metadata:
       neutron:
         networks:
