Add fixed networks amount to network description
Related to bug: #1305612

Change-Id: I5f5060d2799c70c618509f06b6b9c5ee83d7a0cb

--- a/nailgun/nailgun/fixtures/openstack.yaml
+++ b/nailgun/nailgun/fixtures/openstack.yaml
@@ -68,7 +68,7 @@
             render_type: null
             render_addr_mask: null
             map_priority: 2
-            ext_vlan_tag: "fixed_networks_vlan_start"
+            ext_vlan_tag: ["fixed_networks_vlan_start", "fixed_networks_amount"]
             configurable: false
             assign_vip: false
         config:
