Add OpenStack upgrader to fuel-upgrade
OpenStack upgrader performs the following tasks:

* add information about new releases to Nailgun
* add notification about new releases to Nailgun

Related to blueprint fuel-upgrade
Change-Id: I962921492e09e06eb0396fae26c4bea1774720df

--- a/fuel_upgrade_system/fuel_upgrade/fuel_upgrade/config.yaml
+++ b/fuel_upgrade_system/fuel_upgrade/fuel_upgrade/config.yaml
@@ -27,3 +27,10 @@ containers:
     post_build_command: 'true'
     volumes:
       - /var/lib/postgresql
+
+
+# This node contains settings of OpenStack upgrader.
+# So please keep all related settings there.
+openstack:
+  # a path to file with releases info (relative to the path directory)
+  releases: releases.json
