Do not allow usage of some reserved words as user or tenant name
Change-Id: Ib8497f1433d620d9f1f78b85dd00e9951c4523f7
Closes-Bug: #1289405

--- a/nailgun/nailgun/fixtures/openstack.yaml
+++ b/nailgun/nailgun/fixtures/openstack.yaml
@@ -147,6 +147,9 @@
             description: "Username for Administrator"
             weight: 10
             type: "text"
+            regex:
+              source: &user_tenant_blacklist '^(?!services$)(?!nova$)(?!glance$)(?!keystone$)(?!neutron$)(?!cinder$)(?!swift$)(?!ceph$)(?![Gg]uest$).*'
+              error: "Invalid username"
           email:
             value: "admin@example.org"
             label: "email"
@@ -159,6 +162,9 @@
             description: "Tenant (project) name for Administrator"
             weight: 30
             type: "text"
+            regex:
+              source: *user_tenant_blacklist
+              error: "Invalid tenant name"
           password:
             value: "admin"
             label: "password"
