--- a/nailgun/nailgun/fixtures/openstack.yaml
+++ b/nailgun/nailgun/fixtures/openstack.yaml
@@ -564,10 +564,10 @@
 - pk: 1
   extend: *full_release
   fields:
-    name: "Havana on CentOS 6.5"
-    version: "2013.2.2"
+    name: "IceHouse on CentOS 6.5"
+    version: "2014.1.0"
     operating_system: "CentOS"
-    description: "This option will install the OpenStack Havana packages using a CentOS based operating system. With high availability features built in, you are getting a robust, enterprise-grade OpenStack deployment."
+    description: "This option will install the OpenStack IceHouse packages using a CentOS based operating system. With high availability features built in, you are getting a robust, enterprise-grade OpenStack deployment."
     attributes_metadata:
       editable:
         vlan_splinters:
@@ -597,10 +597,10 @@
 - pk: 3
   extend: *full_release
   fields:
-    name: "Havana on Ubuntu 12.04"
-    version: "2013.2.2"
+    name: "IceHouse on Ubuntu 12.04"
+    version: "2014.1.0"
     operating_system: "Ubuntu"
-    description: "This option will install the OpenStack Havana packages using Ubuntu as a base operating system. With high availability features built in, you are getting a robust, enterprise-grade OpenStack deployment."
+    description: "This option will install the OpenStack IceHouse packages using Ubuntu as a base operating system. With high availability features built in, you are getting a robust, enterprise-grade OpenStack deployment."
     attributes_metadata:
       generated:
         cobbler:
