--- a/nailgun/nailgun/settings.yaml
+++ b/nailgun/nailgun/settings.yaml
@@ -486,6 +486,8 @@ DUMP:
       - type: file
         path: /etc/nova*
       - type: file
+        path: /etc/neutron*
+      - type: file
         path: /etc/horizon*
       - type: file
         path: /etc/cinder*
