Role management refactoring
Change-Id: Iaa53d475c59bea57f87eb6b6f4bb844009a71588

--- a/nailgun/nailgun/fixtures/openstack.yaml
+++ b/nailgun/nailgun/fixtures/openstack.yaml
@@ -24,6 +24,9 @@
         conflicts:
           - controller
           - mongo
+        restrictions:
+          - condition: "settings:common.libvirt_type.value == 'vcenter'"
+            warning: "Computes cannot be used with vCenter"
       cinder:
         name: "Storage - Cinder LVM"
         description: "Cinder LVM provides block storage over iSCSI. Block storage can be used for database storage, expandable file systems, or providing a server with access to raw block level devices."
@@ -384,15 +387,17 @@
         description: "Ceph storage can be configured to provide storage for block volumes (Cinder), images (Glance) and ephemeral instance storage (Nova). It can also provide object storage through the S3 and Swift API (See settings to enable each)."
         conflicts:
           - mongo
+        restrictions:
+          - condition: "settings:common.libvirt_type.value == 'vcenter'"
+            warning: "Ceph cannot be used with vCenter"
       mongo:
         name: "Telemetry - MongoDB"
         description: "A feature-complete and recommended database for storage of metering data from OpenStack Telemetry (Ceilometer)."
         conflicts:
           - compute
           - ceph-osd
-        depends:
-          - condition:
-              "settings:additional_components.ceilometer.value": true
+        restrictions:
+          - condition: "settings:additional_components.ceilometer.value != true"
             warning: "Ceilometer should be enabled"
     networks_metadata:
       neutron:
