Spell vCenter properly
Change-Id: I574b9c68f61801fa5b8302904336505825ec3651

--- a/nailgun/nailgun/fixtures/openstack.yaml
+++ b/nailgun/nailgun/fixtures/openstack.yaml
@@ -247,7 +247,7 @@
                 label: "QEMU"
                 description: "Choose this type of hypervisor if you run OpenStack on virtual hosts."
               - data: "vcenter"
-                label: "VCENTER"
+                label: "vCenter"
                 description: "Choose this type of hypervisor if you run OpenStack in a vCenter environment."
                 conflicts:
                   - "cluster:net_provider": "neutron"
