Kernel params for node are passed by Nailgun
Added kernel parameters to openstack.yaml

Closes-Bug: #1295131
Related to bug #1294286

Change-Id: I1fe8ca2b396e36b65ca81d53828e69cd559d8a17

--- a/nailgun/nailgun/fixtures/openstack.yaml
+++ b/nailgun/nailgun/fixtures/openstack.yaml
@@ -655,16 +655,26 @@
     description: "This option will install the OpenStack Icehouse packages using a CentOS based operating system. With high availability features built in, you are getting a robust, enterprise-grade OpenStack deployment."
     attributes_metadata:
       editable:
+        kernel_params:
+          metadata:
+            label: "Kernel parameters"
+            weight: 40
+          kernel:
+            value: "console=ttyS0,9600 console=tty0 biosdevname=0 crashkernel=none rootdelay=90 nomodeset"
+            label: "Initial parameters"
+            description: "Default kernel parameters"
+            weight: 45
+            type: "text"
         vlan_splinters:
           metadata:
             toggleable: true
             enabled: false
             label: "VLAN Splinters"
-            weight: 40
+            weight: 50
           vswitch:
             value: "disabled"
             label: "Open VSwitch VLAN Splinters feature (Neutron only)"
-            weight: 45
+            weight: 55
             type: "radio"
             values:
               - data: "soft"
@@ -688,6 +698,17 @@
     operating_system: "Ubuntu"
     description: "This option will install the OpenStack Icehouse packages using Ubuntu as a base operating system. With high availability features built in, you are getting a robust, enterprise-grade OpenStack deployment."
     attributes_metadata:
+      editable:
+        kernel_params:
+          metadata:
+            label: "Kernel parameters"
+            weight: 40
+          kernel:
+            value: "console=ttyS0,9600 console=tty0 rootdelay=90 nomodeset"
+            label: "Initial parameters"
+            description: "Default kernel parameters"
+            weight: 45
+            type: "text"
       generated:
         cobbler:
           profile:
