--- a/nailgun/nailgun/settings.yaml
+++ b/nailgun/nailgun/settings.yaml
@@ -31,6 +31,7 @@ DATABASE:
 # changes should be made in database if required
 ADMIN_NETWORK:
   cidr: "10.20.0.0/24"
+  mac: "52:54:00:15:b9:60"
   size: "256"
   first: "10.20.0.129"
   last: "10.20.0.254"
