--- a/nailgun/requirements.txt
+++ b/nailgun/requirements.txt
@@ -17,6 +17,7 @@ jsonschema==2.3.0
 kombu==2.5.14
 netaddr==0.7.10
 oslo.config==1.2.1
+ply==3.4
 psycopg2==2.5.1
 pycrypto==2.6.1
 simplejson==3.3.0
