--- a/nailgun/nailgun/settings.yaml
+++ b/nailgun/nailgun/settings.yaml
@@ -78,7 +78,7 @@ LOG_FORMATS:
       - CRIT
       - ALERT
       - EMERG
-  - &remote_imfile_log_format
+  - &remote_openstack_log_format
     regexp: '^(?P<date>\d{4}-\d{2}-\d{2}T\d{2}:\d{2}:\d{2})(?P<secfrac>\.\d{1,})?(?P<timezone>(Z|[+-]\d{2}:\d{2}))?\s[a-z]{3,7}:\s+(?P<date_local>\d{4}-\d{2}-\d{2}\s\d{2}:\d{2}:\d{2}((.|,)\d{3})?)\s+(-\s+)?(?P<pid>\d+)?(\s+)?(-\s+)?(?P<level>[a-zA-Z]{3,8})\s+(?P<text>.*)$'
     date_format: '%Y-%m-%dT%H:%M:%S'
     levels:
@@ -111,7 +111,7 @@ LOG_TYPES:
     remote: True
     multiline: True
     base: *remote_syslog_dir
-  - &remote_imfile_log_type
+  - &remote_openstack_log_type
     remote: True
     multiline: True
     base: *remote_syslog_dir
@@ -244,124 +244,256 @@ LOGS:
 # Openstack logs
   - id: 'os/nova-cert'
     name: "nova-cert"
-    <<: *remote_imfile_log_type
-    <<: *remote_imfile_log_format
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
     <<: *os_log_group
     path: "nova-cert.log"
   - id: 'os/nova-consoleauth'
     name: "nova-consoleauth"
-    <<: *remote_imfile_log_type
-    <<: *remote_imfile_log_format
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
     <<: *os_log_group
     path: "nova-consoleauth.log"
   - id: 'os/nova-scheduler'
     name: "nova-scheduler"
-    <<: *remote_imfile_log_type
-    <<: *remote_imfile_log_format
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
     <<: *os_log_group
     path: "nova-scheduler.log"
   - id: 'os/nova-network'
     name: "nova-network"
-    <<: *remote_imfile_log_type
-    <<: *remote_imfile_log_format
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
     <<: *os_log_group
     path: "nova-network.log"
   - id: 'os/nova-compute'
     name: "nova-compute"
-    <<: *remote_imfile_log_type
-    <<: *remote_imfile_log_format
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
     <<: *os_log_group
     path: "nova-compute.log"
   - id: 'os/nova-conductor'
     name: "nova-conductor"
-    <<: *remote_imfile_log_type
-    <<: *remote_imfile_log_format
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
     <<: *os_log_group
     path: "nova-conductor.log"
   - id: 'os/nova-objectstore'
     name: "nova-objectstore"
-    <<: *remote_imfile_log_type
-    <<: *remote_imfile_log_format
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
     <<: *os_log_group
     path: "nova-objectstore.log"
+  - id: 'os/nova-manage'
+    name: "nova-manage"
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
+    <<: *os_log_group
+    path: "nova-manage.log"
   - id: 'os/keystone'
     name: "keystone"
-    <<: *remote_imfile_log_type
-    <<: *remote_imfile_log_format
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
     <<: *os_log_group
     path: "keystone.log"
+  - id: 'os/keystone-all'
+    name: "keystone-all"
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
+    <<: *os_log_group
+    path: "keystone-all.log"
+  - id: 'os/keystone-manage'
+    name: "keystone-manage"
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
+    <<: *os_log_group
+    path: "keystone-manage.log"
   - id: 'os/cinder-api'
     name: "cinder-api"
-    <<: *remote_imfile_log_type
-    <<: *remote_imfile_log_format
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
     <<: *os_log_group
     path: "cinder-api.log"
   - id: 'os/cinder-volume'
     name: "cinder-volume"
-    <<: *remote_imfile_log_type
-    <<: *remote_imfile_log_format
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
     <<: *os_log_group
     path: "cinder-volume.log"
   - id: 'os/cinder-scheduler'
     name: "cinder-scheduler"
-    <<: *remote_imfile_log_type
-    <<: *remote_imfile_log_format
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
     <<: *os_log_group
     path: "cinder-scheduler.log"
+  - id: 'os/cinder-manage'
+    name: "cinder-manage"
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
+    <<: *os_log_group
+    path: "cinder-manage.log"
   - id: 'os/glance-api'
     name: "glance-api"
-    <<: *remote_imfile_log_type
-    <<: *remote_imfile_log_format
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
     <<: *os_log_group
     path: "glance-api.log"
   - id: 'os/glance-registry'
     name: "glance-registry"
-    <<: *remote_imfile_log_type
-    <<: *remote_imfile_log_format
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
     <<: *os_log_group
     path: "glance-registry.log"
+  - id: 'os/glance-manage'
+    name: "glance-manage"
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
+    <<: *os_log_group
+    path: "glance-manage.log"
+  - id: 'os/glance-cache-cleaner'
+    name: "glance-cache-cleaner"
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
+    <<: *os_log_group
+    path: "glance-cache-cleaner.log"
+  - id: 'os/glance-cache-pruner'
+    name: "glance-cache-pruner"
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
+    <<: *os_log_group
+    path: "glance-cache-pruner.log"
   - id: 'os/neutron-server'
     name: "neutron-server"
-    <<: *remote_imfile_log_type
-    <<: *remote_imfile_log_format
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
     <<: *os_log_group
     path: "neutron-server.log"
   - id: 'os/neutron-ovs-cleanup'
     name: "neutron-ovs-cleanup"
-    <<: *remote_imfile_log_type
-    <<: *remote_imfile_log_format
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
     <<: *os_log_group
     path: "neutron-ovs-cleanup.log"
   - id: 'os/neutron-rescheduling'
     name: "neutron-rescheduling"
-    <<: *remote_imfile_log_type
-    <<: *remote_imfile_log_format
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
     <<: *os_log_group
     path: "neutron-rescheduling.log"
-  - id: 'os/neutron-ovs-agent'
-    name: "neutron-ovs-agent"
-    <<: *remote_imfile_log_type
-    <<: *remote_imfile_log_format
+  - id: 'os/neutron-openvswitch-agent'
+    name: "neutron-openvswitch-agent"
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
     <<: *os_log_group
-    path: "neutron-ovs-agent.log"
+    path: "neutron-openvswitch-agent.log"
   - id: 'os/neutron-l3-agent'
     name: "neutron-l3-agent"
-    <<: *remote_imfile_log_type
-    <<: *remote_imfile_log_format
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
     <<: *os_log_group
     path: "neutron-l3-agent.log"
   - id: 'os/neutron-dhcp-agent'
     name: "neutron-dhcp-agent"
-    <<: *remote_imfile_log_type
-    <<: *remote_imfile_log_format
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
     <<: *os_log_group
     path: "neutron-dhcp-agent.log"
   - id: 'os/neutron-metadata-agent'
     name: "neutron-metadata-agent"
-    <<: *remote_imfile_log_type
-    <<: *remote_imfile_log_format
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
     <<: *os_log_group
     path: "neutron-metadata-agent.log"
+  - id: 'os/ceilometer-agent-central'
+    name: "ceilometer-agent-central"
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
+    <<: *os_log_group
+    path: "ceilometer-agent-central.log"
+  - id: 'os/ceilometer-agent-notification'
+    name: "ceilometer-agent-notification"
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
+    <<: *os_log_group
+    path: "ceilometer-agent-notification.log"
+  - id: 'os/ceilometer-alarm-evaluator'
+    name: "ceilometer-alarm-evaluator"
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
+    <<: *os_log_group
+    path: "ceilometer-alarm-evaluator.log"
+  - id: 'os/ceilometer-alarm-notifier'
+    name: "ceilometer-alarm-notifier"
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
+    <<: *os_log_group
+    path: "ceilometer-alarm-notifier.log"
+  - id: 'os/ceilometer-api'
+    name: "ceilometer-api"
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
+    <<: *os_log_group
+    path: "ceilometer-api.log"
+  - id: 'os/ceilometer-collector'
+    name: "ceilometer-collector"
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
+    <<: *os_log_group
+    path: "ceilometer-collector.log"
+  - id: 'os/ceilometer-dbsync'
+    name: "ceilometer-dbsync"
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
+    <<: *os_log_group
+    path: "ceilometer-dbsync.log"
+  - id: 'os/heat-api-cfn'
+    name: "heat-api-cfn"
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
+    <<: *os_log_group
+    path: "heat-api-cfn.log"
+  - id: 'os/heat-api-cloudwatch'
+    name: "heat-api-cloudwatch"
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
+    <<: *os_log_group
+    path: "heat-api-cloudwatch.log"
+  - id: 'os/heat-api'
+    name: "heat-api"
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
+    <<: *os_log_group
+    path: "heat-api.log"
+  - id: 'os/heat-engine'
+    name: "heat-engine"
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
+    <<: *os_log_group
+    path: "heat-engine.log"
+  - id: 'os/heat-manage'
+    name: "heat-manage"
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
+    <<: *os_log_group
+    path: "heat-manage.log"
+  - id: 'os/murano-api'
+    name: "murano-api"
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
+    <<: *os_log_group
+    path: "murano-api.log"
+  - id: 'os/murano-manage'
+    name: "murano-manage"
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
+    <<: *os_log_group
+    path: "murano-manage.log"
+  - id: 'os/sahara-api'
+    name: "sahara-api"
+    <<: *remote_openstack_log_type
+    <<: *remote_openstack_log_format
+    <<: *os_log_group
+    path: "sahara-api.log"
 
 LOGS_TO_PACK_FOR_SUPPORT:
   logs: '/var/log'
