Move path to SSH key in settings.yaml
Use a path to SSH key from the settings.yaml, instead hardcoded one
during generating config for Shotgun.

Closes-Bug: 1314600
Change-Id: I66f6d163e8ec29bfd552df5e1b59fe9d24a62542

--- a/nailgun/nailgun/settings.yaml
+++ b/nailgun/nailgun/settings.yaml
@@ -387,6 +387,8 @@ RHEL_VALIDATION_TIMEOUT: 10
 
 MAX_ITEMS_PER_PAGE: 500
 
+SHOTGUN_SSH_KEY: "/root/.ssh/id_rsa"
+
 DUMP:
   target: "/var/www/nailgun/dump/fuel-snapshot"
   lastdump: "/var/www/nailgun/dump/last"
