Added docker-* logs to diagnostic snapshot
Added directory `/var/log/docker-logs` and
files `/var/log/docker-*.log` from master
node.

Change-Id: I412939a28162dfb06866080ec9a8596685080969
Related-bug: #1314907

--- a/nailgun/nailgun/settings.yaml
+++ b/nailgun/nailgun/settings.yaml
@@ -475,6 +475,10 @@ DUMP:
         path: /etc/cobbler*
       - type: file
         path: /var/log/fuelmenu.log
+      - type: dir
+        path: /var/log/docker-logs
+      - type: file
+        path: /var/log/docker-*.log
 
     slave:
       hosts: []
